[package]
name = "issue-service"
version = "0.11.1-alpha.1"
description = "Issue Service for staking BTC then get rgb airdrop"
keywords = ["bitcoin", "lightning", "rgb", "smart-contracts", "lnp-bp"]
categories = ["cryptography::cryptocurrencies"]
authors = ["BiHelix <cymqqqq@gmail.com>"]
homepage = "https://github.com/bihelix-io"
repository = "https://github.com/bihelix-io/issue-service.git"
rust-version = "1.81.0"  # rgb-std
edition = "2021"
license = "Apache-2.0"
readme = "README.md"

[dependencies]
serde_json = "1.0.140"
chrono = { version = "0.4.40", features = ["serde"] }
reqwest = { version ="0.12.15", features = ['json']}
hex = "0.4.3"
axum = "0.8.1"
bdk_wallet = {version = "1.1.0" }
serde = { version = "1.0.217", features = ["derive"] }
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
toml = "0.8.20"
async-trait = "0.1.86"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["chrono"] }
tower-http = { version = "0.6.2", features = ["cors", "trace"] }
bitcoin = { version = "0.32.5", features = ["base64"] }
